# sistemaPresenca

./: .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  conftest.py  cz.json  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  loadimage.py  pytest.ini  sendimage.py
back/: .env.example  .gitignore  pyproject.toml
back/core/: asgi.py  settings.py  urls.py
back/ponto/: admin.py  api.py  constants.py  consumer.py  errors.py  models.py  routing.py  wsconsumer.py
back/ponto/controllers/: checkin_controller.py  code_controller.py  scoreboard_controller.py  ws_controller.py
back/ponto/migrations/: 0001_initial.py  0002_alter_checkin_date.py  0002_alter_code_used_alter_member_birthday.py  0003_alter_event_name.py
back/ponto/repositories/: checkin_repository.py  checkin_times_repository.py  code_repository.py  event_repository.py  member_repository.py  score_repository.py  scoreboard_repository.py
back/presenca/: admin.py  api.py  apps.py  bkp_api.py  code_timer.py  consumer.py  errors.py  model_schemas.py  models.py  routing.py  utils.py
back/presenca/api/: auth.py  checkin.py  member.py  score.py
back/presenca/controllers/: checkin_controller.py  code_controller.py  event_controller.py  member_controller.py  score_controller.py  scoreboard_controller.py  user_controller.py  ws_controller.py
back/presenca/migrations/: 0001_initial.py  0002_alter_checkin_date.py  0003_alter_checkin_options_alter_code_options_and_more.py  0004_member_user.py  0005_alter_checkin_member.py  0007_checkin_event.py  0011_configs.py  (+7 more)
(+72 files in other folders)
